[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/HookChain.png" type="Texture" id=1]
[ext_resource path="res://assets/HookHead.png" type="Texture" id=2]
[ext_resource path="res://src/Hooks/GrapplingHook.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 5, 0 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8, 29 )

[sub_resource type="CapsuleShape2D" id=1]
radius = 7.0
height = 10.0

[node name="Grappling Hook" type="Node2D"]
script = ExtResource( 3 )

[node name="Chain" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false
offset = Vector2( -9, 0 )
region_enabled = true
region_rect = Rect2( 0, 0, 18, 360 )

[node name="Collision" type="StaticBody2D" parent="Chain"]
visible = false
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Chain/Collision"]
visible = false
shape = SubResource( 2 )

[node name="Pound Area" type="Area2D" parent="Chain"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Chain/Pound Area"]
position = Vector2( 0, 37 )
shape = SubResource( 3 )

[node name="Head" type="Area2D" parent="."]
scale = Vector2( 2, 2 )
collision_layer = 8
collision_mask = 14

[node name="CollisionShape2D" type="CollisionShape2D" parent="Head"]
visible = false
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Head"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )
centered = false
offset = Vector2( -9, -18 )

[node name="Tween" type="Tween" parent="."]

[connection signal="body_entered" from="Chain/Pound Area" to="." method="_on_Pound_Area_body_entered"]
[connection signal="body_exited" from="Chain/Pound Area" to="." method="_on_Pound_Area_body_exited"]
[connection signal="area_entered" from="Head" to="." method="_on_Head_area_entered"]
[connection signal="body_entered" from="Head" to="." method="_on_Head_body_entered"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
